PythonProjects/ph_fenics/kirchhoff_ph/jitfailure-dolfin_expression_231b5a84496c07a174ec188d403b4667/error.log
/tmp/tmp4m2zx25u/dolfin_expression_231b5a84496c07a174ec188d403b4667.cpp: In member function 'virtual void dolfin::dolfin_expression_231b5a84496c07a174ec188d403b4667::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const':
/tmp/tmp4m2zx25u/dolfin_expression_231b5a84496c07a174ec188d403b4667.cpp:66:98: error: 'pox' was not declared in this scope
           values[0] = w_0/(pow(Lx*Ly, 4))*(pow(Lx,2)/2*x[0] - 3*Lx*pow(x[0], 2) + 4*pow(x[0],3))*pox(Ly/2-x[1], 4)*sin(beta*t);
                                                                                                  ^~~
/tmp/tmp4m2zx25u/dolfin_expression_231b5a84496c07a174ec188d403b4667.cpp:66:98: note: suggested alternative: 'pow'
           values[0] = w_0/(pow(Lx*Ly, 4))*(pow(Lx,2)/2*x[0] - 3*Lx*pow(x[0], 2) + 4*pow(x[0],3))*pox(Ly/2-x[1], 4)*sin(beta*t);
                                                                                                  ^~~
                                                                                                  pow
/tmp/tmp4m2zx25u/dolfin_expression_231b5a84496c07a174ec188d403b4667.cpp: In member function 'virtual double dolfin::dolfin_expression_231b5a84496c07a174ec188d403b4667::get_property(std::__cxx11::string) const':
/tmp/tmp4m2zx25u/dolfin_expression_231b5a84496c07a174ec188d403b4667.cpp:79:11: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
           if (name == "w_0") return w_0;          if (name == "Lx") return Lx;          if (name == "Ly") return Ly;          if (name == "beta") return beta;          if (name == "t") return t;
           ^~
/tmp/tmp4m2zx25u/dolfin_expression_231b5a84496c07a174ec188d403b4667.cpp:79:51: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the 'if'
           if (name == "w_0") return w_0;          if (name == "Lx") return Lx;          if (name == "Ly") return Ly;          if (name == "beta") return beta;          if (name == "t") return t;
                                                   ^~
